# avoidant

./: .gitignore  .prettierrc  Cargo.toml  LICENSE_MIT  README.md  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml  svelte.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: npm-publish.yml
crates/game/: Cargo.toml  LICENSE_APACHE  build.rs
crates/game/src/: game_api.rs  game_network.rs  lib.rs  listener.rs  mapgen.rs  mutation.rs  net.rs  score.rs  shared_constants.rs  ui_state.rs
crates/networking/: Cargo.toml  README.md
crates/networking/src/: lib.rs
messages/: bn.json  en.json
project.inlang/: settings.json
src/: app.css  app.html  hooks.server.ts  lib.rs  state_bridge.rs
src/lib/: index.ts  tutorial.svelte.ts
src/lib/components/: AvoidantGame.svelte  board.spec.ts  board.svelte  fragment.glsl  ribbon.fragment.glsl  ribbon.vertex.glsl  vertex.glsl
src/lib/styles/: global.css
src/lib/wasm/: avoidant_wasm.d.ts  avoidant_wasm.js  avoidant_wasm_bg.wasm  avoidant_wasm_bg.wasm.d.ts  package.json
src/lib/workers/: mapgen-client.ts  mapgen.worker.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/board/: +page.svelte
src/routes/demo/paraglide/: +page.svelte
svelte_state_macros/: Cargo.toml
svelte_state_macros/src/: lib.rs
