[package]
authors = ["Alvin Ali Khaled <aakside@gmail.com>"]
description = "The game logic for Avoidant."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "avoidant"
publish = false
repository = "https://github.com/aakside/avoidant"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.118"
js-sys = "0.3"
svelte_state_macros = { path = "svelte_state_macros" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.68"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
