[package]
authors = ["Alvin Ali Khaled <aak@kuncat.com>"]
description = "The game logic for Avoidant."
edition = "2024"
license = "MIT OR Apache-2.0"
name = "avoidant"
publish = false
repository = "https://github.com/kuncat/avoidant"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.102"
bluenoise = "0.2.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
futures-channel = "0.3"
futures-util = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
n0-future = "0.3.2"
networking = { workspace = true }
rand = "0.9"
rand_xoshiro = "0.7"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
svelte-store = "0.1.3"
tsify = { version = "0.5.6", features = ["js"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1.0"
voronator = "0.2.1"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.70"
wasm-streams = "0.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.68"
