[package]
authors = ["Alvin Ali Khaled <aakside@gmail.com>"]
description = "The networking code for Avoidant."
edition = "2024"
license = "MIT OR Apache-2.0"
name = "networking"
publish = false
repository = "https://github.com/aakside/avoidant"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[dependencies]
iroh = { version = "0.98", default-features = false, features = ["tls-ring"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
