[package]
authors = ["Alvin Ali Khaled <aakside@gmail.com>"]
description = "The networking code for Avoidant."
edition = "2024"
license = "MIT OR Apache-2.0"
name = "networking"
publish = false
repository = "https://github.com/aakside/avoidant"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.102"
iroh = { version = "0.98", default-features = false, features = ["tls-ring"] }
iroh-gossip = { version = "0.98", default-features = false, features = ["net"] }
iroh-tickets = "0.5.0"
n0-future = "0.3.2"
postcard = "1.1.3"
rand = "0.10.1"
serde = "1.0.228"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1.44"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
